<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/current_orders" />
        
        <item
            android:id="@+id/nav_request_delivery"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/request_delivery" />
        
        <item
            android:id="@+id/nav_statistics"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/statistics" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/profile" />
        
        <item
            android:id="@+id/nav_language"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/language" />
        
        <item
            android:id="@+id/nav_signout"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/logout" />
    </group>

</menu>
